--- a/public/rock.html
+++ b/public/rock.html
@@ -26,15 +26,15 @@
     </a>
   </div>
 
-  <h2>
+  <h2 style="color: green;">
     We played rock!
   </h2>
 
-  <h2>
+  <h2 style="color: red">
     They played paper!
   </h2>
 
-  <h2>
+  <h2 style="color: red">
     We lost!
   </h2>
 
