--- a/public/rock.html
+++ b/public/rock.html
@@ -5,41 +5,60 @@
 
   <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
   <meta charset="utf-8">
+
+  <link rel="stylesheet" href="/my-styles.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div>
-    <a href="/rock">
-      Play Rock
+  <div class="row mb">
+    <div class="one-third">
+      <a class="button" href="/rock">
+        Play Rock
+      </a>
+    </div>
+
+    <div class="one-third">
+      <a class="button" href="/paper">
+        Play Paper
+      </a>
+    </div>
+
+    <div class="one-third">
+      <a class="button" href="/scissors">
+        Play Scissors
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="player-card">
+      <h2>
+        <em>We</em> <strong>played</strong> <a href="https:/www.google.com">rock!</a>
+      </h2>
+    </div>
+
+    <div class="computer-card">
+      <h2>
+        They played paper!
+      </h2>
+    </div>
+  </div>
+
+  <div class="row-center mb">
+    <div class="outcome-card">
+      <h2 style="text-align: center">
+        We lost!
+      </h2>
+    </div>
+  </div>  
+
+  <div style="text-align: center">
+    <a href="/">
+      Rules
     </a>
   </div>
 
-  <div>
-    <a href="/paper">
-      Play Paper
-    </a>
-  </div>
-
-  <div>
-    <a href="/scissors">
-      Play Scissors
-    </a>
-  </div>
-
-  <h2 style="color: green;">
-    We played rock!
-  </h2>
-
-  <h2 style="color: red">
-    They played paper!
-  </h2>
-
-  <h2 style="color: red">
-    We lost!
-  </h2>
-
-  <a href="/">
-    Rules
-  </a>
 </body>
 </html>
